created Key to avoid making unnecessary String objects; Key is also easily hashed added some java opts and the UTF-8 props