@@ -19,5 +19,5 @@
 # source "$HOME/.sdkman/bin/sdkman-init.sh"
 # sdk use java 21.0.1-graal 1>&2
 
-JAVA_OPTS=""
+JAVA_OPTS="--enable-preview -XX:+UseG1GC -Dsun.stdout.encoding=UTF-8 -Dfile.encoding=UTF-8"
 java $JAVA_OPTS --class-path target/average-1.0.0-SNAPSHOT.jar dev.morling.onebrc.CalculateAverage_AbstractKamen
